[package]
name = "hoyo-daily"
version = "0.1.0"
edition = "2021"

[dependencies]
cookie = "0.18.1"
cookie_store = "0.21.0"
reqwest = { version = "0.12.5", features = ["blocking", "cookies", "json"] }
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0.204", features = ["derive"] }
tao = "0.28.1"
wry = "0.41.0"
